--- a/client/styles.css
+++ b/client/styles.css
@@ -3,21 +3,30 @@
   font-family: 'Amatic SC', cursive;
   margin: 0;
   padding: 0;
-  font-size: 18px;
+  font-size: 20px;
   /* color: #393939; */
 }
 
 body {
+  background-image: url("https://res.cloudinary.com/dbo7cxsfs/image/upload/v1605739042/Untitled_Artwork-3_kt1pn3.jpg");
+  background-repeat: no-repeat;
+  background-size: 100%;
   background-color: lightblue;
 }
 
 h1 {
   font-size: 50px;
   margin: 0.5em;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
+  width: 300px;
+  background-color: pink;
+  box-shadow: 5px 10px 18px black;
+  border-radius: 1em;
 }
 
 h2 {
-  font-size: 25px;
+  font-size: 30px;
   margin-bottom: 0.5em;
 }
 
@@ -25,6 +34,7 @@ div.container {
   margin: 1em;
   padding: 1em;
   background-color: pink;
+  box-shadow: 5px 10px 18px black;
   border-radius: 1em;
   /* opacity: 0.5; */
 }
